# ros2-learning-

./: read2.md  readme1.md
switch_interfaces/: CMakeLists.txt  package.xml
switch_interfaces/msg/: BoardCommand.msg  BoardStatus.msg  SwitchCommand.msg  SwitchStatus.msg
switch_udp_bridge/: CMakeLists.txt  package.xml
switch_udp_bridge/config/: udp_bridge.yaml
switch_udp_bridge/include/switch_udp_bridge/: byte_utils.hpp  crc16.hpp  protocol.hpp  protocol_constants.hpp  tx_scheduler.hpp  udp_bridge_node.hpp  udp_socket.hpp
switch_udp_bridge/launch/: udp_bridge.launch.py
switch_udp_bridge/src/: crc16.cpp  main.cpp  protocol.cpp  tx_scheduler.cpp  udp_bridge_node.cpp  udp_socket.cpp
